[package]
name = "fast_escape"
version = "0.1.0"
authors = ["Martin Habovštiak <martin.habovstiak@gmail.com>"]
license = "MITNFA"
description = "Simple, fast escaping of characters."
homepage = "https://github.com/Kixunil/fast_escape"
repository = "https://github.com/Kixunil/fast_escape"
readme = "README.md"
keywords = ["fmt", "fast", "escaping", "chars"]
categories = ["no-std", "rust-patterns", "value-formatting"]

[features]
default = ["std"]
std = ["fast_fmt/with_std"]

[dependencies]
fast_fmt = { version = "0.1.3", default-features = false }

[dev-dependencies]
void = "1"
